# JustPlug

./: CMakeLists.txt
include/: iplugin.h  pluginmanager.h
src/: fsutil.cpp  graph.cpp  plugin.cpp  pluginmanager.cpp  pluginmanagerprivate.cpp
src/private/: pluginmanagerprivate.h  stringutil.h
tests/app/plugin_new/: CMakeLists.txt  README.md  meta.json  plugin_new.cpp
